# Python_Live_Sessions

./: .gitignore  README.md  datastrctures.ipynb  decorators.py  functions.ipynb  intro.ipynb  kontrollstrukturen.ipynb  kontrollstrukturen.py  matrix.py  oop_intro.ipynb  pyproject.toml  sudoku.py
FS_functions/: functions.ipynb
FS_generators/: solution.ipynb
Git/: Git.pptx
Python_und_andere_Sprachen/: euclid.asm
advanced/01_oop_intro/: README.md  oop_intro.ipynb  vector_functional.py  vector_oop.py
advanced/1_technical_setup/: README.md
advanced/2_oop_intro/: Vector.md  vector_grafic.ipynb
advanced/3_higher_order_functions/: decorators_notebook.ipynb
advanced/4_data_model/: README.md  lesson.ipynb  vector.py
advanced/5_inheritance/: custom_transformer.ipynb  uni.py  vector.py
advanced/6_advanced_concepts/: README.md  advanced_concepts.ipynb
advanced/6_exceptions/: existiert.txt
advanced/7_testing/: vector_test.ipynb
advanced/8_advanced_concepts/: advanced_concepts.ipynb
advanced/advanced_concepts/: advanced_concepts.ipynb
advanced/data_model/: context_manager.py  decorator.py  generator.py  lesson.ipynb  vector.py
advanced/decorators/: FS_Decorators.ipynb  README.md  decorators.ipynb  decorators_lecture.ipynb  decorators_notebook.ipynb  decorators_notebook.py
advanced/exceptions/: exeptions.ipynb
algorithmen_datenstrukturen/: 1_algorithmen.ipynb  2_datenstrukturen.ipynb
archive/: datastrctures.ipynb
decorators/: FS_Decorators_plain.ipynb
knn und kmeans oop/: create_notebooks.py  plots.ipynb  solution.ipynb
(+70 files in other folders)
